--- a/page/templates/page/adv_list.html
+++ b/page/templates/page/adv_list.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>free ads</title>
+    <title>free advertisements</title>
 </head>
 <body>
 {% for ad in ads %}
